<?xml version="1.0"?>
<package format="2">
  <name>orne_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for the orne
  </description>
  <license>BSD 2.0</license>
  <author email="ambitious0816@gmail.com">taishiyamamoto</author>
  <maintainer email="ambitious0816@gmail.com">taishiyamamoto</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>orne_sim_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>

