<?xml version="1.0"?>
<package format="2">
  <name>orne_simulations</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the orne simulation (meta package)
  </description>
  <license>BSD 2.0</license>
  <author email="ambitious0816@gmail.com">taishiyamamoto</author>
  <maintainer email="ambitious0816@gmail.com">taishiyamamoto</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>orne_sim_description</exec_depend>
  <exec_depend>orne_gazebo</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>
  <export><metapackage/></export>
</package>